--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,13 +40,20 @@ h6 {
 @font-face {
     font-family: 'Inter';
     src: url('fonts/Inter-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url('fonts/Inter-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Inter-Regular';
-    src: url('fonts/Inter-Regular.ttf') format('truetype');
-    font-weight: 400;
+    src: url('fonts/Inter-Bold.ttf') format('truetype');
+    font-weight: 600;
     font-style: normal;
 }
