--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,5 +23,5 @@
     font-family: 'Inter-Regular';
     src: url('fonts/Inter-Bold.ttf') format('truetype');
     font-weight: 600;
-    font-style: normal;
+    font-style: bold;
 }
